--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <div class="container">
         <div class="card">
             <h3>Variables y Tipo de datos</h3>
-            <a href="variables/README.md" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/variables/README.md" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Operadores math lógicos</h3>
-            <a href="operadores/README.md" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/operadores/README.md" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Funciones de Strings y printing</h3>
-            <a href="cadenas/README.md" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/cadenas/README.md" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Control de flujo (pendiente)</h3>
