estructura html lista

--- a/index.html
+++ b/index.html
@@ -14,63 +14,63 @@
     <div class="container">
         <div class="card">
             <h3>Variables y Tipo de datos</h3>
-            <a href="https://github.com/maga1407/kotlin/blob/main/variables/README.md" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/variables/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Operadores math lógicos</h3>
-            <a href="https://github.com/maga1407/kotlin/blob/main/operadores/README.md" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/operadores/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Funciones de Strings y printing</h3>
-            <a href="https://github.com/maga1407/kotlin/blob/main/cadenas/README.md" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/cadenas/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Control de flujo (pendiente)</h3>
-            <a href="README4.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Estructuras de desición, control y manejo de errores (pendiente)</h3>
-            <a href="README5.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Collections, json y manejo de datos (pendiente)</h3>
-            <a href="README6.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Loopers, Bucles (pendiente)</h3>
-            <a href="README7.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Programación funcional y exepciones Lambda (pendiente)</h3>
-            <a href="README8.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Pruebas, test y depuración (pendiente)</h3>
-            <a href="README9.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Programación Orientada a Objetos (POO) (pendiente)</h3>
-            <a href="README10.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Manejo de archivos (pendiente)</h3>
-            <a href="README11.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Gestión de caché concurrencias y corrutinas (pendiente)</h3>
-            <a href="README12.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Desarrollo de interfaces de linea de comandos (pendiente)</h3>
-            <a href="README13.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Aplicación de otras herramientas(pendiente)</h3>
-            <a href="README14.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Interoperatividad con Java (pendiente)</h3>
-            <a href="README15.md" class="button">Ver README</a>
+            <a href="#" target="_blank" class="button">Ver README</a>
         </div>
     </div>
 </body>
