--- a/index.html
+++ b/index.html
@@ -26,51 +26,51 @@
         </div>
         <div class="card">
             <h3>Control de flujo (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/control/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Estructuras de desición, control y manejo de errores (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/estructurasControl/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Collections, json y manejo de datos (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/collections/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Loopers, Bucles (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/loopers/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Programación funcional y exepciones Lambda (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/programación/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Pruebas, test y depuración (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/pruebas/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Programación Orientada a Objetos (POO) (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/poo/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Manejo de archivos (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/archivos/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Gestión de caché concurrencias y corrutinas (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/gestion/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Desarrollo de interfaces de linea de comandos (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/deInterfaces/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Aplicación de otras herramientas(pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/otrasherramietas/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Interoperatividad con Java (pendiente)</h3>
-            <a href="#" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/interoperatividajava/README.md" target="_blank" class="button">Ver README</a>
         </div>
     </div>
 </body>
