--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="card">
             <h3>Programación funcional y exepciones Lambda (pendiente)</h3>
-            <a href="https://github.com/maga1407/kotlin/blob/main/programación/README.md" target="_blank" class="button">Ver README</a>
+            <a href="https://github.com/maga1407/kotlin/blob/main/programacion/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
             <h3>Pruebas, test y depuración (pendiente)</h3>
