Estructura 5 falta audio

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     </header>
     <div class="container">
         <div class="card">
-            <h3>Variables y Tipo de datos</h3>
+            <h3>Variables y Tipo de datos (Falta ultimo ejemplo)</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/variables/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Operadores math lógicos</h3>
+            <h3>Operadores math lógicos (Falta audio)</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/operadores/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Funciones de Strings y printing</h3>
+            <h3>Funciones de Strings y printing (Falta audio)</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/cadenas/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Control de flujo (pendiente)</h3>
+            <h3>Control de flujo (Falta audio)</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/control/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
