Estructura 5 falta audio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://github.com/maga1407/kotlin/blob/main/control/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Estructuras de desición, control y manejo de errores (pendiente)</h3>
+            <h3>Estructuras de desición, control y manejo de errores (Falta audio)</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/estructurasControl/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
