--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <a href="https://github.com/maga1407/kotlin/blob/main/estructurasControl/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Collections, json y manejo de datos (pendiente)</h3>
+            <h3>Collections, json y manejo de datos</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/collections/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Loopers, Bucles (pendiente)</h3>
+            <h3>Loopers, Bucles</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/loopers/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
