--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://github.com/maga1407/kotlin/blob/main/pruebas/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Programación Orientada a Objetos (POO) (pendiente)</h3>
+            <h3>Programación Orientada a Objetos (POO)</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/poo/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
