--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     </header>
     <div class="container">
         <div class="card">
-            <h3>Variables y Tipo de datos (Falta ultimo ejemplo)</h3>
+            <h3>Variables y Tipo de datos</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/variables/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Operadores math lógicos (Falta audio)</h3>
+            <h3>Operadores math lógicos</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/operadores/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Funciones de Strings y printing (Falta audio)</h3>
+            <h3>Funciones de Strings y printing</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/cadenas/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Control de flujo (Falta audio)</h3>
+            <h3>Control de flujo</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/control/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Estructuras de desición, control y manejo de errores (Falta audio)</h3>
+            <h3>Estructuras de desición, control y manejo de errores</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/estructurasControl/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
@@ -41,7 +41,7 @@
             <a href="https://github.com/maga1407/kotlin/blob/main/loopers/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
-            <h3>Programación funcional y exepciones Lambda (pendiente)</h3>
+            <h3>Programación funcional y exepciones Lambda</h3>
             <a href="https://github.com/maga1407/kotlin/blob/main/programacion/README.md" target="_blank" class="button">Ver README</a>
         </div>
         <div class="card">
